app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil42-application
  namespace: dev
  labels:
    app: wil42-application
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: wil42-application
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: wil42-application
    spec:
      containers:
      - name: wil42-application
        image: wil42/playground:v2
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /
            port: 8888
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 5
        ports:
        - containerPort: 8888
