app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wil42-application
  namespace: dev
spec:
  selector:
    app: wil42-application
  ports:
    - port: 8888       # Port exposé sur le cluster
      targetPort: 8888 # Port du container
      nodePort: 30088
  type: NodePort
