app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wil42-application
  namespace: dev
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wil42-application
                port:
                  number: 8888
